karl package Changelog
======================

Unreleased
----------

- Make sure generate_stats script calls set_current_instance. (LP #1067453)

3.101 (2012-11-20)
------------------

- Fixed link to login form in the password reset completed page.
  (LP #1080834).

- Fixed bug in profile display introduced by new Chrome version.
  (LP #1078319)

- Don't break in impersonate login plugin if the value to the left of the colon
  ':' character in the password field is not an actual user.  It is possible
  that some users might actually have passwords which contain colons. (LP 
  #1080760)

- Migrate admin section to ux2 (LP #1043537).

- Avoid error when reference manual marker is removed from a folder and an
  intranet layout is used. (LP #1059559)

- Fixed word wrap problem in recent activity portlet. (LP #1057065)

- Removed intranets link from global nav and made logo link to that when
  inside an intranet. (LP #1053624).

3.100 (2012-11-15)
------------------

- Fix the Add / Edit Event forms, to show the All Day checkbox in ux2. (LP #1060342)

- Fix the position of the option panel in the UX2 wiki index (LP #1057067)

- Implement left-right chevrons in the option panel toggle button 
  in the UX2 wiki index (LP #1057067)

- karl.wikitoc.js is now forked to two separate copies for ux1 and ux2
  (just like all other js, in accordance with our best practice)

3.99 (2012-11-08)
-----------------

- Add optional integration with Velruse for single sign on.

- Implement localized dates for ux2. (LP #1051005)

- Cleaned up the LESS files and changed the width to 950-or-so pixels. 
  (LP #1044077)

- Changed text conversion error into warning to avoid triggering monitor.
  (LP #1035308)

- Fixed date formats (EU / US) in the profile page, in the Created
  column of the Content Added Recently grid. (LP #1057068)

- Fixed event portlet styles on intranets.

- Removed responsive design

- in the ux2 content feeds filter box, make the green button work correctly on IE8.