@@ -961,9 +961,9 @@ div.topNavIconWrapper{float:left;}
 #global-nav li[data-quickpanel="quickpanel"]{display:block;}
 #global-nav:before{display:none;}
 .searchInputWrapper{clear:left;position:relative;z-index:2;border:0;padding:.5em 35px .3em .5em;margin:0;background:#ffffff;-webkit-border-radius:0.3em;-moz-border-radius:0.3em;border-radius:0.3em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}
-form#search-form{top:0;z-index:0;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;display:block;width:100%;white-space:nowrap;padding:0 0 .5em;float:none;font-weight:normal;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:0.8em;margin:0.5em 0.5em 0 0;color:#333333;position:relative;overflow:hidden;background:transparent;text-align:center;text-shadow:none;border:none;}form#search-form fieldset{position:relative;display:block;z-index:2;border:0;margin:-1.3em 0 0;-webkit-transition:margin-top 0.2s linear;-moz-transition:margin-top 0.2s linear;-o-transition:margin-top 0.2s linear;transition:margin-top 0.2s linear;width:225px;background:#ffffff;-webkit-border-radius:0.3em;-moz-border-radius:0.3em;border-radius:0.3em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}
+form#search-form{top:0;z-index:0;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;display:block;width:100%;white-space:nowrap;padding:0 0 .5em;float:none;font-weight:normal;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:0.8em;margin:0.5em 0.5em 0 0;color:#333333;position:relative;overflow:hidden;background:transparent;text-align:center;text-shadow:none;border:none;}form#search-form fieldset{position:relative;display:block;z-index:2;border:0;margin:-1.5em 0 0;-webkit-transition:margin-top 0.2s linear;-moz-transition:margin-top 0.2s linear;-o-transition:margin-top 0.2s linear;transition:margin-top 0.2s linear;width:225px;background:#ffffff;-webkit-border-radius:0.3em;-moz-border-radius:0.3em;border-radius:0.3em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}
 form#search-form fieldset.opened{margin-top:.2em;-webkit-transition:margin-top 0.4s ease-out;-moz-transition:margin-top 0.4s ease-out;-o-transition:margin-top 0.4s ease-out;transition:margin-top 0.4s ease-out;}
-form#search-form label{display:inline;width:auto;padding:0;float:none;font-weight:normal;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;margin:0 0.5em 0 0;color:#ffffff;background:transparent;position:relative;overflow:hidden;font-size:0.7em;}
+form#search-form label{display:inline;width:auto;padding:0;float:none;font-weight:normal;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;margin:0 0.5em 0 0;color:#ffffff;background:transparent;position:relative;overflow:hidden;font-size:0.9em;}
 form#search-form select{display:block;opacity:0;margin:0;height:2em;top:0;right:0;z-index:2;position:absolute;width:auto;padding:0;}
 form#search-form span.fieldCoverage{display:inline-block;padding:0 1.3em 0 .7em;margin:0;position:relative;line-height:1.5em;color:#222222;-webkit-border-radius:0.3em;-moz-border-radius:0.3em;border-radius:0.3em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;padding-right:1.9em;pointer-events:none;background:#eeeeee;border:1px solid #eeeeee;}form#search-form span.fieldCoverage:before{border-bottom:none;border-left:0.266666667em solid transparent;border-right:0.266666667em solid transparent;border-top:0.266666667em solid #222222;content:"";display:block;width:0;height:0;position:absolute;z-index:2;top:50%;margin-top:-0.1em;right:.266666667em;*line-height:0;}
 form#search-form span.fieldCoverage:after{content:"";display:block;position:absolute;z-index:1;top:0;right:0;height:1.5em;width:1.25em;background:#555555;-webkit-border-radius:0 0.3em 0.3em 0;-moz-border-radius:0 0.3em 0.3em 0;border-radius:0 0.3em 0.3em 0;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;*line-height:0;}
@@ -1656,7 +1656,7 @@ body>.loading-indicator label{padding-left:20px;background:url('plugins/popper-g
 .pp-grid .grid-canvas .slick-cell,.pp-grid .grid-canvas .slick-headerrow-column{border-top:1px solid #FFFFFF;border-bottom:0;border-left:0;border-right:0;}
 .pp-grid .grid-canvas .odd{background:#f9f9f9;}
 .pp-grid .grid-canvas .karl-wikitoc-grid-row-hover .slick-cell{background:#ffffff;}
-.pp-grid .grid-canvas .slick-cell{padding:5px 7.5834px;font-size:0.889em;}.pp-grid .grid-canvas .slick-cell td{font-size:1em;}
+.pp-grid .grid-canvas .slick-cell{padding:5px 7.5834px;font-size:0.889em;}.pp-grid .grid-canvas .slick-cell td{font-size:12px;}
 body .pp-grid .grid-canvas .slick-cell{line-height:0.889em;}
 @media only screen and (min-width:640px){.pp-grid .grid-canvas .slick-cell{padding:5px 15.1667px;}}.pp-grid .grid-canvas .slick-cell a,.pp-grid .grid-canvas .slick-cell a:visited,.pp-grid .grid-canvas .slick-cell .ui-widget-content a,.pp-grid .grid-canvas .slick-cell .ui-widget-content a:visited{color:#3a74a9;text-decoration:none;}
 .pp-grid .grid-canvas .slick-cell a:hover,.pp-grid .grid-canvas .slick-cell .ui-widget-content a:hover{color:#78a6d1;text-decoration:none;border-bottom:none;}
@@ -1680,14 +1680,14 @@ body .pp-grid .slick-header-columns .slick-header-column.ui-state-default{line-h
 .pp-grid .grid-canvas .slick-cell,.pp-grid .grid-canvas .slick-headerrow-column{border-top:1px solid #FFFFFF;border-bottom:0;border-left:0;border-right:0;}
 .pp-grid .grid-canvas .odd{background:#f9f9f9;}
 .pp-grid .grid-canvas .karl-wikitoc-grid-row-hover .slick-cell{background:#ffffff;}
-.pp-grid .grid-canvas .slick-cell{padding:5px 7.5834px;font-size:0.889em;}.pp-grid .grid-canvas .slick-cell td{font-size:1em;}
+.pp-grid .grid-canvas .slick-cell{padding:5px 7.5834px;font-size:0.889em;}.pp-grid .grid-canvas .slick-cell td{font-size:12px;}
 body .pp-grid .grid-canvas .slick-cell{line-height:0.889em;}
 @media only screen and (min-width:640px){.pp-grid .grid-canvas .slick-cell{padding:5px 15.1667px;}}.pp-grid .grid-canvas .slick-cell a,.pp-grid .grid-canvas .slick-cell a:visited,.pp-grid .grid-canvas .slick-cell .ui-widget-content a,.pp-grid .grid-canvas .slick-cell .ui-widget-content a:visited{color:#3a74a9;text-decoration:none;}
 .pp-grid .grid-canvas .slick-cell a:hover,.pp-grid .grid-canvas .slick-cell .ui-widget-content a:hover{color:#78a6d1;text-decoration:none;border-bottom:none;}
 .pp-grid .grid-canvas .slick-cell table{height:100%;border:0 none;padding:0;background:none;}
 .pp-grid .grid-canvas .slick-cell td{border:0 none;padding:0;vertical-align:middle;text-align:left;}
 .pp-grid .slick-header{border-top:0;border-bottom:0;}
-.pp-grid .slick-header-columns{background:#8f806f;}.pp-grid .slick-header-columns .slick-header-column{height:14px;line-height:14px;margin:0;border-right:1px solid #FFFFFF;border-left:0px;border-top:0px;border-bottom:0px;background:none repeat scroll 0 0 #8F806F;color:#DBCFC1;background:#8f806f;font-family:"CabinRegular",Arial,sans-serif;color:#dbcfc1;font-weight:bold;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.4);}.pp-grid .slick-header-columns .slick-header-column.ui-state-default{padding:5px 7.5834px;font-size:0.889em;}.pp-grid .slick-header-columns .slick-header-column.ui-state-default td{font-size:1em;}
+.pp-grid .slick-header-columns{background:#8f806f;}.pp-grid .slick-header-columns .slick-header-column{height:14px;line-height:14px;margin:0;border-right:1px solid #FFFFFF;border-left:0px;border-top:0px;border-bottom:0px;background:none repeat scroll 0 0 #8F806F;color:#DBCFC1;background:#8f806f;font-family:"CabinRegular",Arial,sans-serif;color:#dbcfc1;font-weight:bold;text-shadow:0 -1px 0 rgba(0, 0, 0, 0.4);}.pp-grid .slick-header-columns .slick-header-column.ui-state-default{padding:5px 7.5834px;font-size:12px;}.pp-grid .slick-header-columns .slick-header-column.ui-state-default td{font-size:1em;}
 body .pp-grid .slick-header-columns .slick-header-column.ui-state-default{line-height:0.889em;}
 @media only screen and (min-width:640px){.pp-grid .slick-header-columns .slick-header-column.ui-state-default{padding:5px 15.1667px;}}
 .pp-grid .slick-header-columns .slick-header-column a,.pp-grid .slick-header-columns .slick-header-column a:visited{color:#dbcfc1;}
